# BB-TM-in-C

./: BB-TM-in-C.c  BB-TM-in-C.h  CMakeLists.txt  README.md  cc-BB.c  cc-BB.h  cc-bb.js  index.html  webui-BBTM.c
wa-bb/: bb.wasm  bb.wat  index.html  wa-bb.js
